--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -21,7 +21,7 @@
         android:layout_height="wrap_content"
         android:gravity="center"
         android:paddingBottom="16dp"
-        android:text="For QyzROM"
+        android:text="功能概览"
         android:textColor="@android:color/black"
         android:textSize="24sp"
         android:textStyle="bold"
