--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -1,73 +1,85 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/white"
     android:padding="16dp">
 
-  <LinearLayout
+  <com.google.android.material.card.MaterialCardView
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
-      android:background="@drawable/rounded_corners"
-      android:gravity="center"
-      android:orientation="vertical"
       android:layout_marginTop="20dp"
-      android:padding="16dp">
+      app:cardBackgroundColor="@color/cardview_light_background"
+      app:cardCornerRadius="16dp"
+      app:cardElevation="4dp">
 
-    <TextView
-        android:id="@+id/title"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:paddingBottom="16dp"
-        android:text="功能概览"
-        android:textColor="@android:color/black"
-        android:textSize="24sp"
-        android:textStyle="bold"
-        tools:ignore="HardcodedText" />
+        android:orientation="vertical"
+        android:padding="16dp">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:paddingBottom="8dp"
-        android:text="@string/SETTINGS_LOG"
-        android:textColor="@android:color/black"
-        android:textSize="18sp" />
+      <com.google.android.material.textview.MaterialTextView
+          android:id="@+id/title"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:gravity="center"
+          android:paddingBottom="16dp"
+          android:text="功能概览"
+          android:textColor="@android:color/black"
+          android:textSize="24sp"
+          android:textStyle="bold"
+          tools:ignore="HardcodedText" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:paddingBottom="8dp"
-        android:text="@string/SSRM_LOG"
-        android:textColor="@android:color/black"
-        android:textSize="18sp" />
+      <com.google.android.material.textview.MaterialTextView
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:paddingBottom="8dp"
+          android:text="@string/SETTINGS_LOG"
+          android:textColor="@android:color/black"
+          android:textSize="18sp" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:paddingBottom="8dp"
-        android:text="@string/TELE_LOG"
-        android:textColor="@android:color/black"
-        android:textSize="18sp" />
+      <com.google.android.material.textview.MaterialTextView
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:paddingBottom="8dp"
+          android:text="@string/SSRM_LOG"
+          android:textColor="@android:color/black"
+          android:textSize="18sp" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:paddingBottom="8dp"
-        android:text="@string/CAMERA_LOG"
-        android:textColor="@android:color/black"
-        android:textSize="18sp" />
+      <com.google.android.material.textview.MaterialTextView
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:paddingBottom="8dp"
+          android:text="@string/TELE_LOG"
+          android:textColor="@android:color/black"
+          android:textSize="18sp" />
 
-    <Button
-        android:id="@+id/button_hide_icon"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginTop="15dp"
-        android:padding="16dp"
-        android:text="@string/hide"
-        android:textColor="@android:color/black"
-        android:textSize="17sp" />
-  </LinearLayout>
+      <com.google.android.material.textview.MaterialTextView
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:paddingBottom="8dp"
+          android:text="@string/BILI_LOG"
+          android:textColor="@android:color/black"
+          android:textSize="18sp" />
+
+      <com.google.android.material.button.MaterialButton
+          android:id="@+id/button_hide_icon"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:layout_gravity="center"
+          android:layout_marginTop="15dp"
+          android:padding="10dp"
+          android:textStyle="bold"
+          android:text="@string/hide"
+          android:textSize="17sp"
+          app:cornerRadius="10dp"
+          app:backgroundTint="@color/colorAccent"
+          android:textColor="@android:color/black" />
+    </LinearLayout>
+  </com.google.android.material.card.MaterialCardView>
 </ScrollView>
