--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -4,6 +4,7 @@
     <item>com.android.settings</item>
     <item>com.sec.android.sdhms</item>
     <item>com.samsung.android.dialer</item>
-    <item>com.sec.android.app.camera</item>
+    <item>com.bilibili.app.in</item>
+    <item>tv.danmaku.bili</item>
   </string-array>
 </resources>
