array.xml: add clock

--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -6,5 +6,6 @@
     <item>com.samsung.android.dialer</item>
     <item>com.bilibili.app.in</item>
     <item>tv.danmaku.bili</item>
+    <item>com.sec.android.app.clockpackage</item>
   </string-array>
 </resources>
