camera: allow close sound

--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -71,7 +70,17 @@
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:paddingBottom="8dp"
+          android:textStyle="italic"
           android:text="@string/CLOCK_LOG"
+          android:textColor="@android:color/black"
+          android:textSize="18sp" />
+
+      <com.google.android.material.textview.MaterialTextView
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:paddingBottom="8dp"
+          android:textStyle="italic"
+          android:text="@string/CAMERA_LOG"
           android:textColor="@android:color/black"
           android:textSize="18sp" />
 
@@ -82,12 +91,12 @@
           android:layout_gravity="center"
           android:layout_marginTop="15dp"
           android:padding="10dp"
-          android:textStyle="bold"
           android:text="@string/hide"
+          android:textColor="@android:color/black"
           android:textSize="17sp"
-          app:cornerRadius="10dp"
+          android:textStyle="bold"
           app:backgroundTint="@color/colorAccent"
-          android:textColor="@android:color/black" />
+          app:cornerRadius="10dp" />
     </LinearLayout>
   </com.google.android.material.card.MaterialCardView>
 </ScrollView>
