--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -7,5 +7,6 @@
     <item>com.bilibili.app.in</item>
     <item>tv.danmaku.bili</item>
     <item>com.sec.android.app.clockpackage</item>
+    <item>com.sec.android.app.camera</item>
   </string-array>
 </resources>
